Solved the dropdown overflow issue.

--- a/client/app/main/main.less
+++ b/client/app/main/main.less
@@ -16,7 +16,7 @@
 }
 
 .dropdown-menu {
-  z-index: 1001;
+  z-index: 1001 !important;
 }
 
 .navbar-inverse .dropdown-menu {
